Make sure the label spacing applies to filters and sort
References #356

--- a/templates/2k11/admin/style.css
+++ b/templates/2k11/admin/style.css
@@ -1028,8 +1028,9 @@ input[type=checkbox],
 .js .media_choose label,
 .js .media_choose input,
 .quick_list ol > li,
-#media_filter .form_field > label,
-#media_filter .form_select > label,
+#media_pane_filter .form_field > label,
+#media_pane_filter .form_select > label,
+#media_pane_sort .form_select > label,
 .serendipity_emoticon_bar {
     margin-bottom: .75em;
 }
